ansible-zookeeper-centos

--- a/templates/zoo.cfg.j2
+++ b/templates/zoo.cfg.j2
@@ -4,6 +4,7 @@ dataLogDir={{log_dir}}
 clientPort={{client_port}}
 initLimit={{init_limit}}
 syncLimit={{sync_limit}}
+maxClientCnxns={{max_client_cnxns}}
 
 {% if servers %}
 
